--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -36,3 +36,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "dicky-pokedex2"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          healthcheck: https://dicky-pokedex2.herokuapp.com/health
+          checkstring: ok
