--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,7 +40,7 @@ jobs:
           wait-on: http://localhost:5000
       - name: deploy
         uses: akhileshns/heroku-deploy@v3.7.8
-        if: ${{ github.event_name == 'push' }}
+        if: github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "dicky-pokedex2"
